[package]
name = "multi3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
# crossterm = "*"
# ratatui = "*"
tokio = { version = "*", features = ["full"] }
clap = { version = "4.5.3", features = ["derive"] }

[profile.release]
opt-level = 's'
