[package]
name = "multi3"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
clap = { version = "*", features = ["derive"] }
derive_more = { version = "*", features = ["full"] }

[profile.release]
opt-level = 's'
